--- a/API/client-1194.conf
+++ b/API/client-1194.conf
@@ -3,6 +3,7 @@ client
 dev tun
 proto tcp
 
+remote TONZA-VPN udp 999
 remote xxxxxxxxx:1194@lvs.truehits.in.th
 http-proxy xxxxxxxxx 8080
 connect-retry 1
